# hackathon_judge_assignment

./: .gitignore  README.md  code_review.md  pyproject.toml
data/: example_judges.json  example_judges_no_names.json  example_participants.json  example_participants_no_names.json
data/inputs/: judges_raw.txt
data/outputs/: assignment_results.md  assignment_violations.md
example/: company_to_problem.txt  judges_info.txt  participants_info.txt
src/: judge_assignment_algorithm.py  preprocess_data.py  utils.py
