[project]
name = "hackathon-judge-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "matplotlib>=3.10.5",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
